# Puzzle

./: .gitignore  CMakeLists.txt  main.cpp
GUI/mvc/di/: Injector.h  PuzzleMakerImpl.cpp  PuzzleMakerImpl.h  PuzzleMakerImplementation.cpp  PuzzleMakerImplementation.h  PuzzleSolverImpl.cpp  PuzzleSolverImpl.h  Utils.cpp  Utils.h
GUI/mvc/model/: IPuzzleMaker.h  IPuzzleSolver.h  Notification.cpp  Notification.h  Worker.cpp  Worker.h
GUI/mvc/view/: INotifiable.h  PuzzleSolverUI.glade~  PuzzleSolverWindow.cpp  PuzzleSolverWindow.h
GUI/resources/: style.css
PuzzleMaker/: PuzzleMaker.cpp  PuzzleMaker.h
PuzzleSolver/: CMakeLists.txt  PuzzleSolver.cpp  PuzzleSolver.h
